<resources>
    <string name="app_name">Service Support</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_punchin">Punch In/Out</string>
    <string name="menu_Attendance">Attendance</string>
    <string name="menu_c_resolve">Complaint Resolve</string>
    <string name="menu_c_Booking">Complaint Booking</string>
    <string name="menu_Eng">ENG Installation</string>
    <string name="menu_installation">Installation</string>
    <string name="menu_Expense">Expense</string>
    <string name="menu_PM">PM Report</string>
    <string name="menu_m_acceptance">Material Acceptance</string>
    <string name="menu_m_management">Material Management</string>
    <string name="menu_T_request">Trip Request</string>
    <string name="menu_ar_Leave">Approve/Reject Leave</string>
    <string name="menu_user">User</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_complaint">StartComplaint</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="Purpose">
        <item>Intallation</item>
        <item>Preventive Maintainance</item>
        <item>Demo</item>
    </string-array>
    <string-array name="TravelMode">
        <item>Rail</item>
        <item>Road</item>
        <item>Air</item>
    </string-array>
    <string-array name="ApproveAuthority">
        <item>BI</item>
        <item>Admin</item>
    </string-array>
    <string-array name="Reigon">
        <item>East</item>
        <item>West</item>
        <item>South</item>
        <item>North</item>
    </string-array>
</resources>
