<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.servicesupport.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_ComplaintResolve"
        android:name="com.example.servicesupport.ui.comresolve.ComoresolveFragment"
        android:label="@string/menu_c_resolve"
        tools:layout="@layout/comoresolve_fragment" />
    <fragment
        android:id="@+id/nav_Expense"
        android:name="com.example.servicesupport.ui.Expense.Expense_Fragment"
        android:label="@string/menu_Expense"
        tools:layout="@layout/expense__fragment" />
    <fragment
        android:id="@+id/nav_ComplaintBooking"
        android:name="com.example.servicesupport.ui.Complaint_Booking.Complaint_Booking_Fragment"
        android:label="@string/menu_c_Booking"
        tools:layout="@layout/complaint__booking__fragment" />
    <fragment
        android:id="@+id/nav_Trip_request"
        android:name="com.example.servicesupport.ui.triprequest.TriprequestFragment"
        android:label="@string/menu_c_resolve"
        tools:layout="@layout/triprequest_fragment" />

</navigation>